# metsuke

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.yml  emulate.config.yaml  entrypoint.sh  flake.nix  fly.toml  package.json  playwright.config.ts  pnpm-lock.yaml
.claude/skills/: verify-pr.md  verify-release.md  verify-repo.md
.github/workflows/: ci.yml  deploy.yml
crates/server/: Cargo.toml
crates/server/src/: auth.rs  blocking.rs  bulk.rs  config.rs  db.rs  github_app.rs  main.rs  oauth.rs  resources.rs  server.rs  swr_cache.rs  validation.rs  web.rs  webhook.rs
crates/server/src/db/: audit.rs  cache.rs  installation.rs  mod.rs  oauth.rs  session.rs  types.rs  user.rs
crates/server/src/github_app/: installation.rs  jwt.rs  mod.rs  webhook.rs
crates/server/src/prompts/: audit.rs  mod.rs  onboarding.rs  pr_review.rs
crates/server/src/tools/: analysis.rs  metadata.rs  mod.rs  output.rs  policy.rs  verify.rs
crates/server/src/web/: audit.rs  auth.rs  bulk.rs  events.rs  helpers.rs  jobs.rs  mod.rs  pages.rs  repos.rs  templates.rs  verify.rs
crates/server/static/: app.js  landing.css  style.css  theme-init.js  themes.css  verify-common.js
crates/server/static/pages/: audit.js  repo-detail.js  repos.js  settings.js  verify-pr.js  verify-release.js
crates/server/templates/: audit.html  base.html  dashboard.html  error.html  landing.html  repo_detail.html  repos.html  settings.html  verify_pr.html  verify_release.html
docs/: security-whitepaper.md  self-hosted-guide.md
e2e/: error.spec.ts  landing.spec.ts  layout.spec.ts  static-assets.spec.ts
infra/: .gitignore  alb.tf  ecr.tf  ecs.tf  main.tf  oidc.tf  outputs.tf  secrets.tf  variables.tf  vpc.tf
skill/metsuke/: SKILL.md
skills/verify-pr/: SKILL.md
skills/verify-release/: SKILL.md
skills/verify-repo/: SKILL.md
