[workspace]
members = ["crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HikaruEgashira/metsuke"
authors = ["Hikaru Egashira"]

[workspace.dependencies]
libverify-core = "0.1"
libverify-policy = "0.1"
libverify-output = "0.1"
libverify-github = "0.1"

rmcp = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
