[workspace]
members = ["crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HikaruEgashira/metsuke"
authors = ["Hikaru Egashira"]

[workspace.dependencies]
libverify-github = "0.2"

rmcp = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
urlencoding = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
