[package]
name = "metsuke"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "目付 — SDLC process inspector. Remote MCP Server powered by libverify."

[[bin]]
name = "metsuke"
path = "src/main.rs"

[dependencies]
libverify-github.workspace = true

rmcp.workspace = true
axum.workspace = true
tower.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true

serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
