[package]
name = "metsuke"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "目付 — SDLC process inspector. Remote MCP Server powered by libverify."

[[bin]]
name = "metsuke"
path = "src/main.rs"

[dependencies]
libverify-github.workspace = true
libverify-policy.workspace = true

rmcp.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
askama.workspace = true
askama_web.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tokio.workspace = true
async-stream.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
rand.workspace = true
urlencoding.workspace = true

serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
